tests/codegen/errors/reader/define-type-asm/atom.reader.error.reader.type.missing.name/reader-type-missing-name.mon
;; TEST-ID: tests.codegen.reader-error.reader-type-missing-name
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/define-type-asm
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected type name after 'type'
;; TEST-ATOM: atom.reader.error.reader.type.missing.name
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.type.missing.name
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected type name after 'type'
;; TEST-READER-PATH: reader.c:3990 parser.type
;; TEST-CODEGEN-PATH: diagnostic.parser.type
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3990 Expected type name after 'type'
;; TEST-USES-ATOM: atom.reader.error.reader.type.missing.name
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.type
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/define-type-asm/atom.reader.error.reader.type.missing.name
;; TEST-MENU-PATH: codegen/errors/reader/define-type-asm/atom.reader.error.reader.type.missing.name
;; TEST-ATOM-LEAF: atom.reader.error.reader.type.missing.name
;; TEST-CLI-TARGET: codegen errors reader define-type-asm

(module Main)
(type)
